Added thank-you redirect to contact form

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   <!-- stop spam -->
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_subject" value="New Portfolio Contact!">
-  <input type="hidden" name="_next" value="https://yourdomain.com/#thankyou">
+  <input type="hidden" name="_next" value="https://sai-charan-portfolio-68.vercel.app/#thankyou">
   
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
