Added thank-you redirect to contact form

--- a/index.html
+++ b/index.html
@@ -184,22 +184,23 @@
     </section>
     <section id="contact" class="contact">
     <div class="container">
-    <h2>Contact Me</h2>
+<h2>Contact Me</h2>
 
 <form class="contact-form" action="https://formsubmit.co/ksaicharan13579@gmail.com" method="POST">
-<p id="thankyou" style="display:none; margin-top:10px; color:green;">
-  ✅ Thank you for reaching out! I’ll get back to you soon.
-</p>
-  <!-- stop spam -->
+  <p id="thankyou" style="display:none; margin-top:10px; color:green;">
+    ✅ Thank you for reaching out! I’ll get back to you soon.
+  </p>
+
+  <!-- FormSubmit settings -->
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_subject" value="New Portfolio Contact!">
   <input type="hidden" name="_next" value="https://sai-charan-portfolio-68.vercel.app/#thankyou">
-  
+
+  <!-- Fields -->
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
   <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
   <button type="submit" class="btn">Send Message</button>
-  <input type="hidden" name="_next" value="http://localhost:5500/index.html#thankyou">
 </form>
 
     <!-- Social Icons -->
@@ -282,8 +283,8 @@ window.addEventListener("load", function() {
     thankYou.style.display = "block";
     setTimeout(() => {
       thankYou.style.display = "none";
-      window.location.hash = ""; // clears #thankyou from URL
-    }, 10000); // hides after 5 sec
+      history.replaceState(null, null, " ");
+    }, 5000);
   }
 });
 
