--- a/index.html
+++ b/index.html
@@ -186,21 +186,19 @@
     <div class="container">
 <h2>Contact Me</h2>
 
-<form class="contact-form" action="https://formsubmit.co/ksaicharan13579@gmail.com" method="POST">
-  <p id="thankyou" style="display:none; margin-top:10px; color:green;">
-    ✅ Thank you for reaching out! I’ll get back to you soon.
-  </p>
+<form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+  <!-- Get your free key from https://web3forms.com/ -->
+  <input type="hidden" name="access_key" value="b703f2f2-a570-41d1-b05f-5c0651613e7f">
 
-  <!-- FormSubmit settings -->
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_subject" value="New Portfolio Contact!">
-  <input type="hidden" name="_next" value="https://sai-charan-portfolio-68.vercel.app/#thankyou">
-
-  <!-- Fields -->
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
   <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+
   <button type="submit" class="btn">Send Message</button>
+
+  <p id="thankyou" style="display:none; margin-top:10px; color:green;">
+    ✅ Thank you for reaching out! I’ll get back to you soon.
+  </p>
 </form>
 
     <!-- Social Icons -->
@@ -277,16 +275,27 @@ window.onload = () => {
   typeGreeting();
 };
 
-window.addEventListener("load", function() {
+  const form = document.querySelector(".contact-form");
   const thankYou = document.getElementById("thankyou");
-  if (window.location.hash === "#thankyou") {
-    thankYou.style.display = "block";
-    setTimeout(() => {
-      thankYou.style.display = "none";
-      history.replaceState(null, null, " "); // clears the #thankyou from URL without reload
-    }, 5000);
-  }
-});
+
+  form.addEventListener("submit", async function(e) {
+    e.preventDefault();
+    const data = new FormData(form);
+    const response = await fetch(form.action, {
+      method: form.method,
+      body: data
+    });
+
+    if (response.ok) {
+      thankYou.style.display = "block";
+      form.reset();
+      setTimeout(() => {
+        thankYou.style.display = "none";
+      }, 5000);
+    } else {
+      alert("❌ Something went wrong. Please try again.");
+    }
+  });
 
       const hamburger = document.querySelector('.hamburger');
       const navLinks = document.querySelector('.nav-links');
