--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sai Charan's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> 
 </head>
@@ -27,7 +27,7 @@
     <h2><span id="helloText">Hello</span><span id="helloText"></span><span id="cursor">|</span>
     <span>, I'm Sai Charan Kodhandigari</span></h2>
     <p>Aspiring Software Engineer | Lifelong Learner | Goal - Oriented</p>
-    <a href="Black White Modern Simple Tech Resume.pdf" target="_blank" class="btn">Download Résumé</a>
+    <a href="./images/final_resume_Sai_Charan_K (1).pdf" target="_blank" class="btn">Download Résumé</a>
     </div>
     </section>
     <section id="about" class="about">
